--- a/nextcoin.conf
+++ b/nextcoin.conf
@@ -14,3 +14,4 @@ daemon=1
 datadir=/data/nextcoin
 rpcworkqueue=128
 printtoconsole=1 # If you want to see the debug logs in the console
+shrinkdebuglog=1 # Keep the debug logfile under it's limites
